# safari-bookmarks-mcp

./: CHANGELOG.md  README.md  justfile  pyproject.toml
src/safaribookmarks/: __init__.py  models.py  safaribookmarks.py
src/safaribookmarks/cli/: cli.py  main.py
src/safaribookmarks/mcp/: bootstrap.py  server.py  service.py
tests/: test_bootstrap.py  test_cli.py  test_mcp_server.py  test_models.py  test_safaribookmarks.py  test_service.py
